bk_ida/gccida/g1/recog_7
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8326:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = ( __int64)x0[1]; 
               ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8346:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v27; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8359:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v25; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8382:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v28; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8395:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v26; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8422:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v31; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8426:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v41; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8427:40: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v3 + 16), recog_data_0.operand[1]) ) 
                                       ^~~~~~~~~~~~
                                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8429:40: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v3 + 24), recog_data_0.operand[2]) 
                                       ^~~~~~~~~~~~
                                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8454:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v31; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8458:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v42; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8459:40: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v3 + 16), recog_data_0.operand[1]) ) 
                                       ^~~~~~~~~~~~
                                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8461:40: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v3 + 24), recog_data_0.operand[2]) 
                                       ^~~~~~~~~~~~
                                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8465:17: error: use of undeclared identifier 'recog_data_0'
&& ( *( _WORD *)recog_data_0.operand[1] != 66 || *( _WORD *)recog_data_0.operand[2] != 66) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8465:61: error: use of undeclared identifier 'recog_data_0'
&& ( *( _WORD *)recog_data_0.operand[1] != 66 || *( _WORD *)recog_data_0.operand[2] != 66) 
                                                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8487:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v31; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8491:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v32; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8492:40: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v3 + 16), recog_data_0.operand[1]) ) 
                                       ^~~~~~~~~~~~
                                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/insn-recog.c:8494:40: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v3 + 24), recog_data_0.operand[2]) 
                                       ^~~~~~~~~~~~
                                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_7/src/obj/insn-recog.o] Error 1
